--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     <div class="nytimes-container">
         <h3 id="nytimes-header">New York Times Articles</h3>
         <ul id="nytimes-articles" class="article-list">
-            <li class="article"></li>
-            <li class="article"></li>
-            <li class="article"></li>
         </ul>
     </div>
 
-    <script src="js/libs/jquery.min.js"></script>
+    <!--<script src="js/libs/jquery.min.js"></script>-->
+    <script
+            src="https://code.jquery.com/jquery-3.1.1.js"
+            integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+            crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 
 
