refactor: Add Google API +key for google streetview

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 
+    <!--Add API for Google Streetview-->
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyD2tKBjRkdAtSJthU2Wm135MmtptdoQxm8&language=de"></script>
 
 </body>
 </html>
